fix para in about to be vertically aligned, feat. social links and bg-color to gradient, status bar color change

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,28 +2,27 @@
 font-family: Quicksand, sans-serif; */
 
 body {
-    background: #f6f6f6;
+    /* background: #f6f6f6; */
+    background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #ffa94dc7);
 }
 
 nav {
-    background-color: #dfcdb6;
+    /* background-color: #dfcdb6; */
+    background-color: #f6f6f6;
 }
 
-nav a {
-font-family: Quicksand, sans-serif; 
-font-weight: bolder !important;
-font-size: 20px !important;
-}
-
-nav a:hover {
-    color: white !important;
-}
 p, h2 {
     font-family: Quicksand;
 }
-/* #about {
 
-} */
+nav a {
+    font-family: Quicksand, sans-serif; 
+    font-weight: bolder !important;
+    font-size: 20px !important;
+}
+
+nav a:hover { color: white !important; }
+
 .name {
     font-family: Kanit, sans-serif;
     font-size: 2.5rem;
@@ -36,6 +35,13 @@ p, h2 {
   text-shadow: 1px 1.5px 1.5px #6E0A1E;
   text-transform: uppercase;
   white-space: nowrap;
+}
+.fa-github { color: #040404; }
+.fa-linkedin { color: #0B65C2; }
+.fa-twitter { color: #1DA1F2; }
+.fa-codepen { color: #424242; }
+.fa-github:hover, .fa-linkedin:hover, .fa-twitter:hover, .fa-codepen:hover {
+    opacity: 0.7;
 }
 
 .rightpic {
@@ -54,13 +60,27 @@ p, h2 {
 }
 .html {
     width: 40%;
+    background-color: #fa6035;
 }
 
 .css {
     width: 30%;
+    background-color: #3B9CD7;
 }
 .bootstrap {
     width: 20%;
+   background-color: #8512FA;
+}
+
+@media only screen and (max-width: 767px) {
+    .title {
+        white-space: normal !important;
+    }
+    .name {
+    font-family: Kanit, sans-serif;
+    font-size: 2.2rem;
+    color: #010101;
+    }
 }
 
 @media only screen and (min-width:768px) {
@@ -69,12 +89,14 @@ p, h2 {
         font-size: 1.5rem;
         letter-spacing: 5.5px;
         color: #d0a769;
-        text-shadow: 1px 1.5px 1.5px #6E0A1E;
+        text-shadow: 2px 2px 1.5px #6E0A1E;
         text-transform: uppercase;
+        padding-right: 2px;
     }
     .right-pic {
         width: 100%;
     }
+
 }
 
   @media only screen and (min-width: 992px) {
@@ -83,7 +105,7 @@ p, h2 {
         font-size: 2rem;
         color: #d0a769;
         letter-spacing: 8px;
-        text-shadow: 1px 1.5px 1.5px #6E0A1E;
+        text-shadow: 2.1px 2px 1.5px #6E0A1E;
         letter-spacing: 8px;
         padding-right: 1px;
     }
@@ -98,7 +120,7 @@ p, h2 {
         font-size: 2.5rem;
         color: #d0a769;
         letter-spacing: 10px;
-        text-shadow: 1px 1.5px 1.5px #6E0A1E;
+        text-shadow: 2.5px 2px 1.5px #6E0A1E;
     }
     .right-pic {
         width: 100%;
